网路请求可以使用

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NeiHanJetpack</string>
+    <string name="app_name">内涵段子Jetpack</string>
     <string name="page">页数:</string>
     <string name="type">内涵类型:</string>
 </resources>
